--- a/lesson11/preston-11.html
+++ b/lesson11/preston-11.html
@@ -28,11 +28,11 @@
         <ul class="navbar">
             <li><a class="ham" onclick="toggleMenu()" href="#">&#9776; Menu</a></li>
             <li><a href="index.html">Home</a></li>
-            <li><a href="preston-11.html" class="active">Preston</a></li>
-            <li><a href="sodasprings-11.html">Soda Springs</a></li>
+            <li><a href="preston.html" class="active">Preston</a></li>
+            <li><a href="sodasprings.html">Soda Springs</a></li>
             <li><a href="fishhaven.html">Fish Haven</a></li>
             <li><a href="stormcenter.html">Storm Center</a></li>
-            <li><a href="gallery-11.html">Gallery</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
         </ul>
     </nav>
     <main>
