--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -138,7 +138,7 @@
         </p>
     </footer>
     <script src="js/navagation.js"></script>
-    <script src="js/weatherapi.js"></script>
+    <script src="js/prestonapi.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script>
         WebFont.load({
